Practica_4_3/iptables-rules1.txt
# Generated by iptables-save v1.8.7 on Tue May 11 12:34:10 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -i eth2 -s 192.168.1.0/24 -j LOG --log-prefix "IP Spoofing"
-A FORWARD -i eth1 ! -s 192.168.1.0/24 -j LOG --log-prefix "IP Spoofing"
-A FORWARD -i eth1 --icmp-type 8 -j ACCEPT
-A FORWARD -p tcp -m state --state NEW  --dport 22 -j ACCEPT
-A FORWARD -p tcp -m state --state NEW -d 192.168.1.10/24 --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue May 11 12:34:10 2021
