Practica_4_3/iptables-rules3.txt
# Generated by iptables-save v1.8.7 on Tue May 11 13:31:27 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [4:240]
-A PREROUTING -i eth2 -p tcp --dport 80 -j DNAT --to 192.168.1.10:80
-A PREROUTING -i eth2 -p tcp --dport 22 -j DNAT --to 192.168.1.11:22
-A POSTROUTING -o eth2 -j MASQUERADE
-A POSTROUTING -o eth2 -j MASQUERADE
COMMIT
# Completed on Tue May 11 13:31:27 2021

# Generated by iptables-save v1.8.7 on Tue May 11 13:31:27 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A FORWARD -i eth1 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m state --state NEW  -d 192.168.1.0/24 --dport 80 -j ACCEPT
-A FORWARD -m state --state NEW  -d 192.168.1.0/24 --dport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue May 11 13:31:27 2021
